--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
     </ul>
     <h2>Coding Languages</h2>
         <ul>
-            <li>Java ***</li>
-            <li>Python **</li>
-            <li>C **</li>
-            <li>HTML***</li>
+            <li>Java ⭐⭐⭐</li>
+            <li>Python ⭐⭐</li>
+            <li>C ⭐⭐</li>
+            <li>HTML⭐⭐⭐</li>
         </ul>
     <h2>Skills</h2>
         <ul>
